--- a/.eslintignore
+++ b/.eslintignore
@@ -7,6 +7,7 @@ flow-typed/*
 libs/*
 
 react/features/stream-effects/blur/vendor/*
+resources/*
 
 # ESLint will by default ignore its own configuration file. However, there does
 # not seem to be a reason why we will want to risk being inconsistent with our
